# src

./: .gitignore
arduino_ros2_hello/: ARDUINO_SETUP_GUIDE.md  README.md  package.xml  run_startup_sequence.sh  setup.cfg  setup.py  simple_commands.sh  simple_serial_test.py  simple_test_commands.sh  startup_sequence.py  test_arduino_connection.py  test_commands.sh  test_communication.sh  test_connection.sh  test_pwm.sh  test_rplidar_movement.sh  test_rplidar_simple.py  test_steering.sh
arduino_ros2_hello/arduino_code/: arduino_rplidar.ino
arduino_ros2_hello/arduino_ros2_hello/: arduino_bridge.py  rplidar_arduino_bridge.py
arduino_ros2_hello/launch/: arduino_bridge_only.launch.py  rplidar_arduino_bridge.launch.py
robotaksi_controller/: package.xml  setup.py
robotaksi_controller/config/: controllers.yaml  nav2.yaml  twist_filter.yaml
robotaksi_controller/launch/: controller.launch.py  nav2.launch.py
robotaksi_controller/robotaksi_controller/: cmd_vel_converter.py
robotaksi_description/: package.xml  setup.cfg  setup.py
robotaksi_description/launch/: display.launch.py  gazebo.launch.py
robotaksi_description/urdf/: d435_camera.xacro  imu.xacro  robotaksi.gazebo  robotaksi.xacro  rplidar_s2.xacro
robotaksi_description/worlds/: robotaksi.world
robotaksi_lane_detection/: README.md  package.xml  setup.cfg  setup.py
robotaksi_lane_detection/config/: lane_following_params.yaml
robotaksi_lane_detection/launch/: lane_following.launch.py  lane_following_with_params.launch.py
robotaksi_lane_detection/robotaksi_lane_detection/: lane_detection_node.py
robotaksi_localization/: package.xml  setup.cfg  setup.py
robotaksi_localization/config/: amcl_params.yaml
robotaksi_localization/launch/: localization.launch.py
robotaksi_localization/maps/: map.pgm  map.yaml
robotaksi_mapping/: package.xml  setup.cfg  setup.py
yolov8_ros/: package.xml  setup.py
(+8 files in other folders)
